src/style/index.scss
@use "./reset";
@use "./loader";
@use "./home";
@use "./lobby";
@use "./game";
@use "./profile";
@use "./shop";
@use "./block";
@use "./error";
@use "./login";
@use "./modal";

// noinspection CssUnknownTarget
@import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");

@font-face {
    font-weight: 400;
    font-family: modeseven;
    src:
        url("./modeseven.woff") format("woff"),
        url("./modeseven.woff2") format("woff2");
}

body {
    height: 100vh;

    color: white;
    font-family: modeseven, monospace;
    line-height: 1;
    text-transform: uppercase;

    background-color: black;
}

#root {
    height: 100%;
}

a:hover {
    color: red;

    /* stylelint-disable-next-line plugin/no-low-performance-animation-properties */
    transition: color 0.3s ease-in-out;
}

.page-container {
    width: 850px;
    height: 650px;
    padding: 0 5px 5px;

    background-color: white;
}

.page-container__title {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 24px 14px;

    color: black;
    font-weight: 400;
    font-size: 16px;
}

.page-container__content {
    width: 100%;
    height: calc(100% - 64px);
    padding: 0 8px;
    overflow-y: scroll;

    background-color: black;
}

.page-container__content__table {
    width: 100%;
    margin-bottom: 8px;

    text-align: center;

    thead {
        position: sticky;
        top: 0;
        z-index: 2;

        background-color: black;

        th {
            padding: 12px 0 8px;

            &:first-of-type {
                text-align: left;
            }
        }
    }

    tbody {
        position: relative;

        color: black;

        tr {
            height: 0;

            background-color: #e5e5e5;
            border-top: 8px solid black;

            td {
                padding: 26px 13px;

                &:first-of-type {
                    text-align: left;
                }
            }
        }
    }
}

.login-page__message {
    position: absolute;
    top: 60%;
    left: 50%;

    text-align: center;

    transform: translate(-50%, -50%);
}

.draggable-component {
    transform: translate(0, 0);
}

